@@ -1,7 +1,7 @@
           Release Notes for NEdit Version 5.5, October 2004
 
 
-$Id: ReleaseNotes,v 1.40 2006/08/13 18:02:27 yooden Exp $
+$Id: ReleaseNotes,v 1.41 2006/08/13 18:41:54 yooden Exp $
 
 This file contains last minute notes to users about the release, which are not
 included in the documentation or README files included with the distribution
@@ -52,6 +52,8 @@ Bugs fixed in $NEXT_VERSION
   - Replace operation where the result exceeded a fixed length silently
     clipped the result. The limit has been increased and the behaviour on
     failure is now configurable. (SF bug #1015499)
+
+  - NEdit can now optionally detect and avoid symlinks (SF bug #1027788).
 
 
 New features in 5.5 
